--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
       </div>
     </div>
 
-    <div class="container-fluid pb-4 pt-5">
+    <!-- <div class="container-fluid pb-4 pt-5">
       <div class="container animate-box">
         <div>
           <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">
@@ -186,7 +186,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
   </div>
 
@@ -264,6 +264,9 @@
             </li>
             <li>
               <a href="contact.html" class="footer_last_part_menu">Contact</a>
+            </li>
+            <li>
+              <a href="terms.html" class="footer_last_part_menu">Terms and Cond</a>
             </li>
           </ul>
         </div>
