--- a/contact.html
+++ b/contact.html
@@ -151,17 +151,8 @@
               <div class="col-12 col-md-12">
                 <form class="row" id="fh5co_contact_form">
                   <div class="col-12 py-3">
-                    <input type="text" class="form-control fh5co_contact_text_box" placeholder="Enter Your Name" />
-                  </div>
-                  <div class="col-6 py-3">
                     <input type="text" class="form-control fh5co_contact_text_box" placeholder="E-mail" />
-                  </div>
-                  <div class="col-6 py-3">
-                    <input type="text" class="form-control fh5co_contact_text_box" placeholder="Subject" />
-                  </div>
-                  <div class="col-12 py-3">
-                    <textarea class="form-control fh5co_contacts_message" placeholder="Message"></textarea>
-                  </div>
+                  </div>   
                   <div class="col-12 py-3 text-center">
                     <a href="#" class="btn contact_btn">Sign Up</a>
                   </div>
@@ -352,6 +343,9 @@
             </li>
             <li>
               <a href="contact.html" class="footer_last_part_menu">Contact</a>
+            </li>
+            <li>
+              <a href="terms.html" class="footer_last_part_menu">Terms and Cond</a>
             </li>
           </ul>
         </div>
