--- a/events.html
+++ b/events.html
@@ -80,14 +80,15 @@
       </nav>
     </div>
   </div>
-  <div class="container-fluid text-center animate-box">
+
+  <!-- <div class="container-fluid text-center animate-box">
     <img class="img-fluid" style="padding: 30px 0px 0px 0px" src="images/ad.jpg" />
-  </div>
+  </div> -->
 
   <div class="container padding">
     <div class="row">
 
-      <div class="col-12 col-md-12 py-4 Reserved">
+      <div class="col-12 col-md-9 py-4 Reserved">
         <div class="container-fluid pb-4 pt-4 paddding">
           <div class="row mx-0">
             <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
@@ -279,18 +280,18 @@
         </div>
       </div>
 
-      <!-- <div class="col-12 col-md-3 py-4 Reserved">
+      <div class="col-12 col-md-3 py-4 Reserved">
         <div class="container-fluid pb-4 pt-4 paddding">
           <div class="container paddding">
 
             <div class="animate-box" data-animate-effect="fadeInLeft">
               <div>
-                <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Latest</div>
+                <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Sponsors</div>
               </div>
-              <img src="images/twitter.png" class="img-responsive" style="width: 300px" />
+              <img src="images/sponsor1.png" class="img-responsive" style="width: 300px" />
             </div>
 
-            <hr class="short" style="margin-left: 0; margin-top: 60px">
+            <!-- <hr class="short" style="margin-left: 0; margin-top: 60px">
 
             <div>
               <div class="fh5co_heading py-2 mb-4">Related News</div>
@@ -355,13 +356,17 @@
                   </article>
                 </li>
               </ul>
-            </div>
+            </div> -->
 
           </div>
         </div>
-      </div> -->
+      </div>
 
     </div>
+  </div>
+
+  <div class="container-fluid text-center animate-box">
+    <img class="img-fluid" style="margin: -30px 0px 60px 0px" src="images/ad.jpg" />
   </div>
 
   <div class="container-fluid fh5co_footer_right_reserved">
@@ -438,6 +443,9 @@
             </li>
             <li>
               <a href="contact.html" class="footer_last_part_menu">Contact</a>
+            </li>
+            <li>
+              <a href="terms.html" class="footer_last_part_menu">Terms and Cond</a>
             </li>
           </ul>
         </div>
