--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@
       <h5 style="color:#fff; padding: 20px; width: 250px; margin: 60px auto; border: solid 1px rgb(255,255,255)">WATCH NOW</h5>
     </div>
   </div>
-  <div class="container-fluid text-center animate-box">
-    <img class="img-fluid" style="padding: 30px 0px 0px 0px" src="images/ad.jpg" />
-  </div>
+
   <div class="container-fluid pb-4 pt-5">
     <div class="container animate-box">
       <div>
@@ -296,6 +294,10 @@
     </div>
   </div>
 
+  <div class="container-fluid text-center animate-box">
+    <img class="img-fluid" style="margin: 0px 0px 60px 0px" src="images/ad.jpg" />
+  </div>
+
   <div class="container-fluid fh5co_footer_right_reserved">
     <div class="container">
       <div class="row">
@@ -370,6 +372,9 @@
             </li>
             <li>
               <a href="contact.html" class="footer_last_part_menu">Contact</a>
+            </li>
+            <li>
+              <a href="terms.html" class="footer_last_part_menu">Terms and Cond</a>
             </li>
           </ul>
         </div>
