--- a/news.html
+++ b/news.html
@@ -80,9 +80,6 @@
       </nav>
     </div>
   </div>
-  <div class="container-fluid text-center animate-box">
-    <img class="img-fluid" style="padding: 30px 0px 0px 0px" src="images/ad.jpg" />
-  </div>
 
   <div class="container paddding">
     <div class="row">
@@ -293,12 +290,12 @@
 
             <div class="animate-box" data-animate-effect="fadeInLeft">
               <div>
-                <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Latest</div>
+                <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Sponsors</div>
               </div>
-              <img src="images/twitter.png" class="img-responsive" style="width: 300px" />
+              <img src="images/sponsor1.png" class="img-responsive" style="width: 300px" />
             </div>
 
-            <hr class="short" style="margin-left: 0; margin-top: 60px">
+            <!-- <hr class="short" style="margin-left: 0; margin-top: 60px">
 
             <div>
               <div class="fh5co_heading py-2 mb-4">Related News</div>
@@ -363,7 +360,7 @@
                   </article>
                 </li>
               </ul>
-            </div>
+            </div> -->
 
           </div>
         </div>
@@ -372,6 +369,10 @@
     </div>
   </div>
 
+  <div class="container-fluid text-center animate-box">
+    <img class="img-fluid" style="margin: -30px 0px 60px 0px" src="images/ad.jpg" />
+  </div>
+  
   <div class="container-fluid fh5co_footer_right_reserved">
     <div class="container">
       <div class="row">
@@ -446,6 +447,9 @@
             </li>
             <li>
               <a href="contact.html" class="footer_last_part_menu">Contact</a>
+            </li>
+            <li>
+              <a href="terms.html" class="footer_last_part_menu">Terms and Cond</a>
             </li>
           </ul>
         </div>
