--- a/single.html
+++ b/single.html
@@ -91,15 +91,20 @@
 
   <div class="container paddding">
     <div class="row animate-box">
-
       <div class="col-md-9 col-sm-12">
         <!-- Tab panes -->
+
+        <ul class="nav nav-tabs" role="tablist" style="margin-top: 55px">
+          <li class="nav-item">
+            <a class="nav-link active" href="#about" role="tab" data-toggle="tab">About Event</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#results" role="tab" data-toggle="tab">Results</a>
+          </li>
+        </ul>
+
         <div class="tab-content">
           <div role="tabpanel" class="tab-pane active" id="about">
-
-            <div class="container-fluid text-center animate-box">
-              <img class="img-fluid" style="padding: 30px 0px 0px 0px" src="images/ad.jpg" />
-            </div>
 
             <div class="container" style="padding: 30px">
               <h1>PUBG</h1>
@@ -113,24 +118,21 @@
               <p>is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei, at usu debet libris liberavisse.
                 Hendrerit efficiantur ex usu, duo id wisi magna.</p>
               <hr class="short" style="margin-left: 0px">
-              <h4><a href="about.html">Sponsors</a></h4>
-              <p>is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei, at usu debet libris liberavisse.
-                Hendrerit efficiantur ex usu, duo id wisi magna. is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris
-                mei, at usu debet libris liberavisse. Hendrerit efficiantur ex usu, duo id wisi magna.</p>
-              <hr class="short" style="margin-left: 0px">
-              <h4>Rules</h4>
-              <p>is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei, at usu debet libris liberavisse.
-                Hendrerit efficiantur ex usu, duo id wisi magna.</p>
+              <h4>
+                <h4>Sponsors</h4>
+                <p>is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei, at usu debet libris liberavisse.
+                  Hendrerit efficiantur ex usu, duo id wisi magna. is Lorem ipsum dolor sit amet, at commune intellegebat
+                  interpretaris mei, at usu debet libris liberavisse. Hendrerit efficiantur ex usu, duo id wisi magna.</p>
+                <hr class="short" style="margin-left: 0px">
+                <h4>Rules</h4>
+                <p>is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei, at usu debet libris liberavisse.
+                  Hendrerit efficiantur ex usu, duo id wisi magna.</p>
             </div>
           </div>
 
           <div role="tabpanel" class="tab-pane fade" id="results">
 
             <!-- <div id="wrap"> -->
-            <div class="container-fluid text-center animate-box">
-              <img class="img-fluid" style="padding: 30px 0px 0px 0px" src="images/ad.jpg" />
-            </div>
-
             <div class="container" style="padding: 30px">
               <h3>PUBG Aftermath</h3>
               <table cellpadding="0" cellspacing="0" border="0" class="datatable table table-striped table-bordered">
@@ -244,19 +246,23 @@
             <!-- </div> -->
 
           </div>
-
-          <ul class="nav nav-tabs" role="tablist">
-            <li class="nav-item">
-              <a class="nav-link active" href="#about" role="tab" data-toggle="tab">About Event</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#results" role="tab" data-toggle="tab">Results</a>
-            </li>
-          </ul>
         </div>
+
+        <div class="container-fluid text-center animate-box">
+          <img class="img-fluid" style="margin: 30px 0px 60px 0px" src="images/ad.jpg" />
+        </div>
+
       </div>
 
       <div class="col-md-3 col-sm-12" style="margin-top: 35px;">
+
+        <div class="animate-box" data-animate-effect="fadeInLeft">
+          <div>
+            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Sponsors</div>
+          </div>
+          <img src="images/sponsor1.png" class="img-responsive" style="width: 300px" />
+        </div>
+
 
         <div class="animate-box" data-animate-effect="fadeInLeft">
           <div>
@@ -411,6 +417,9 @@
             </li>
             <li>
               <a href="contact.html" class="footer_last_part_menu">Contact</a>
+            </li>
+            <li>
+              <a href="terms.html" class="footer_last_part_menu">Terms and Cond</a>
             </li>
           </ul>
         </div>
