--- a/teams.html
+++ b/teams.html
@@ -138,107 +138,342 @@
     </div>
   </div>
 
-  <!-- PLAYER BIOS and CIRCLE PICS -->
-  <div class="container-fluid animate-box">
-    <div class="container" style="padding: 60px">
-      <div class="row">
-        <a href="#" class="circle">
-          <img src="images/clan.png">
-        </a>
-        <h1>FaZe Clan</h1>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet lectus
-            pulvinar posuere. Nunc vehicula eleifend egestas. Vivamus in lorem in dolor molestie molestie sit amet ut elit.
-            Nulla accumsan nisl sapien, eget tristique nunc condimentum ac. Nam interdum tortor.Lorem ipsum dolor sit amet,
-            consectetur adipiscing.</p>
-        </div>
-        <div class="col-md-6">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet lectus
-            pulvinar posuere. Nunc vehicula eleifend egestas. Vivamus in lorem in dolor molestie molestie sit amet ut elit.
-            Nulla accumsan nisl sapien</p>
+  <div class="container-fluid pb-4 pt-5">
+    <div class="container animate-box">
+      <div>
+        <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">
+          Teams
         </div>
       </div>
-      <hr class="short" style="margin-left: 0px"> Based in: United States</p>
+      <div class="owl-carousel owl-theme" id="slider4">
+        <div class="item px-2">
 
-      <!-- <div id="wrap"> -->
-      <div class="container">
-        <h3>Team Members</h3>
-        <table cellpadding="0" cellspacing="0" border="0" class="datatable table table-striped table-bordered">
-          <thead>
-            <tr>
-              <th>Name</th>
-              <th>Global Points</th>
-              <th>Total Scores</th>
-              <th>Total Kills</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="gradeX">
-              <td>
-<a href="players.html">Dave Dudebody</a>
-              </td>
-              <td>95,000,000</td>
-              <td class="center">32</td>
-              <td class="center">664</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-<a href="players.html">Dave Dudebody</a>
-              </td>
-              <td>95,000,000</td>
-              <td class="center">32</td>
-              <td class="center">664</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-<a href="players.html">Dave Dudebody</a>
-              </td>
-              <td>95,000,000</td>
-              <td class="center">32</td>
-              <td class="center">664</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-<a href="players.html">Dave Dudebody</a>
-              </td>
-              <td>95,000,000</td>
-              <td class="center">32</td>
-              <td class="center">664</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-<a href="players.html">Dave Dudebody</a>
-              </td>
-              <td>95,000,000</td>
-              <td class="center">32</td>
-              <td class="center">664</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-<a href="players.html">Dave Dudebody</a>
-              </td>
-              <td>95,000,000</td>
-              <td class="center">32</td>
-              <td class="center">664</td>
-            </tr>
-          </tbody>
-          <tfoot>
-            <tr>
-              <th>Name</th>
-              <th>Global Points</th>
-              <th>Total Scores</th>
-              <th>Total Kills</th>
-            </tr>
-          </tfoot>
-        </table>
+          <!-- PLAYER BIOS and CIRCLE PICS -->
+          <div class="container-fluid animate-box">
+            <div class="container" style="padding: 60px">
+              <div class="row">
+                <a href="#" class="circle">
+                  <img src="images/clan.png">
+                </a>
+                <h1>FaZe Clan</h1>
+              </div>
+              <div class="row">
+                <div class="col-md-6">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet
+                    lectus pulvinar posuere. Nunc vehicula eleifend egestas. Vivamus in lorem in dolor molestie molestie
+                    sit amet ut elit. Nulla accumsan nisl sapien, eget tristique nunc condimentum ac. Nam interdum tortor.Lorem
+                    ipsum dolor sit amet, consectetur adipiscing.</p>
+                </div>
+                <div class="col-md-6">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet
+                    lectus pulvinar posuere. Nunc vehicula eleifend egestas. Vivamus in lorem in dolor molestie molestie
+                    sit amet ut elit. Nulla accumsan nisl sapien</p>
+                </div>
+              </div>
+              <hr class="short" style="margin-left: 0px"> Based in: United States</p>
+
+              <!-- <div id="wrap"> -->
+              <div class="container">
+                <h3>Team Members</h3>
+                <table cellpadding="0" cellspacing="0" border="0" class="datatable table table-striped table-bordered">
+                  <thead>
+                    <tr>
+                      <th>Gamer Tag</th>
+                      <th>Player Name</th>
+                      <th>Hometown</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr class="gradeX">
+                      <td>
+                        <a href="players.html">Killz_Streak57</a>
+                      </td>
+                      </td>
+                      <td class="center">Dave Smith</td>
+                      <td class="center">San Francisco, CA</td>
+                    </tr>
+                    <tr class="gradeX">
+                      <td>
+                        <a href="players.html">Killz_Streak57</a>
+                      </td>
+                      </td>
+                      <td class="center">Dave Smith</td>
+                      <td class="center">San Francisco, CA</td>
+                    </tr>
+                    <tr class="gradeX">
+                      <td>
+                        <a href="players.html">Killz_Streak57</a>
+                      </td>
+                      </td>
+                      <td class="center">Dave Smith</td>
+                      <td class="center">San Francisco, CA</td>
+                    </tr>
+                    <tr class="gradeX">
+                      <td>
+                        <a href="players.html">Killz_Streak57</a>
+                      </td>
+                      </td>
+                      <td class="center">Dave Smith</td>
+                      <td class="center">San Francisco, CA</td>
+                    </tr>
+                    <tr class="gradeX">
+                      <td>
+                        <a href="players.html">Killz_Streak57</a>
+                      </td>
+                      </td>
+                      <td class="center">Dave Smith</td>
+                      <td class="center">San Francisco, CA</td>
+                    </tr>
+                    <tr class="gradeX">
+                      <td>
+                        <a href="players.html">Killz_Streak57</a>
+                      </td>
+                      </td>
+                      <td class="center">Dave Smith</td>
+                      <td class="center">San Francisco, CA</td>
+                    </tr>
+                  </tbody>
+                  <tfoot>
+                    <tr>
+                      <th>Gamer Tag</th>
+                      <th>Player Name</th>
+                      <th>Hometown</th>
+                    </tr>
+                  </tfoot>
+                </table>
+              </div>
+              <!-- </div> -->
+
+            </div>
+          </div>
+          <!-- PLAYER BIOS and CIRCLE PICS -->
+
+        </div>
+        <div class="item px-2">
+
+          <!-- PLAYER BIOS and CIRCLE PICS -->
+          <div class="container-fluid animate-box">
+            <div class="container" style="padding: 60px">
+              <div class="row">
+                <a href="#" class="circle">
+                  <img src="images/clan.png">
+                </a>
+                <h1>Lazer Force</h1>
+              </div>
+              <div class="row">
+                <div class="col-md-6">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet
+                    lectus pulvinar posuere. Nunc vehicula eleifend egestas. Vivamus in lorem in dolor molestie molestie
+                    sit amet ut elit. Nulla accumsan nisl sapien, eget tristique nunc condimentum ac. Nam interdum tortor.Lorem
+                    ipsum dolor sit amet, consectetur adipiscing.</p>
+                </div>
+                <div class="col-md-6">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet
+                    lectus pulvinar posuere. Nunc vehicula eleifend egestas. Vivamus in lorem in dolor molestie molestie
+                    sit amet ut elit. Nulla accumsan nisl sapien</p>
+                </div>
+              </div>
+              <hr class="short" style="margin-left: 0px"> Based in: United States</p>
+
+              <!-- <div id="wrap"> -->
+              <div class="container">
+                <h3>Team Members</h3>
+                <table cellpadding="0" cellspacing="0" border="0" class="datatable table table-striped table-bordered">
+                  <thead>
+                    <tr>
+                      <th>Gamer Tag</th>
+                      <th>Player Name</th>
+                      <th>Hometown</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr class="gradeX">
+                      <td>
+                        <a href="players.html">Killz_Streak57</a>
+                      </td>
+                      </td>
+                      <td class="center">Dave Smith</td>
+                      <td class="center">San Francisco, CA</td>
+                    </tr>
+                    <tr class="gradeX">
+                      <td>
+                        <a href="players.html">Killz_Streak57</a>
+                      </td>
+                      </td>
+                      <td class="center">Dave Smith</td>
+                      <td class="center">San Francisco, CA</td>
+                    </tr>
+                    <tr class="gradeX">
+                      <td>
+                        <a href="players.html">Killz_Streak57</a>
+                      </td>
+                      </td>
+                      <td class="center">Dave Smith</td>
+                      <td class="center">San Francisco, CA</td>
+                    </tr>
+                    <tr class="gradeX">
+                      <td>
+                        <a href="players.html">Killz_Streak57</a>
+                      </td>
+                      </td>
+                      <td class="center">Dave Smith</td>
+                      <td class="center">San Francisco, CA</td>
+                    </tr>
+                    <tr class="gradeX">
+                      <td>
+                        <a href="players.html">Killz_Streak57</a>
+                      </td>
+                      </td>
+                      <td class="center">Dave Smith</td>
+                      <td class="center">San Francisco, CA</td>
+                    </tr>
+                    <tr class="gradeX">
+                      <td>
+                        <a href="players.html">Killz_Streak57</a>
+                      </td>
+                      </td>
+                      <td class="center">Dave Smith</td>
+                      <td class="center">San Francisco, CA</td>
+                    </tr>
+                  </tbody>
+                  <tfoot>
+                    <tr>
+                      <th>Gamer Tag</th>
+                      <th>Player Name</th>
+                      <th>Hometown</th>
+                    </tr>
+                  </tfoot>
+                </table>
+              </div>
+              <!-- </div> -->
+
+            </div>
+          </div>
+          <!-- PLAYER BIOS and CIRCLE PICS -->
+
+        </div>
+        <div class="item px-2">
+      
+           <!-- PLAYER BIOS and CIRCLE PICS -->
+           <div class="container-fluid animate-box">
+              <div class="container" style="padding: 60px">
+                <div class="row">
+                  <a href="#" class="circle">
+                    <img src="images/clan.png">
+                  </a>
+                  <h1>Bazooka_Kill Clowns</h1>
+                </div>
+                <div class="row">
+                  <div class="col-md-6">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet
+                      lectus pulvinar posuere. Nunc vehicula eleifend egestas. Vivamus in lorem in dolor molestie molestie
+                      sit amet ut elit. Nulla accumsan nisl sapien, eget tristique nunc condimentum ac. Nam interdum tortor.Lorem
+                      ipsum dolor sit amet, consectetur adipiscing.</p>
+                  </div>
+                  <div class="col-md-6">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet
+                      lectus pulvinar posuere. Nunc vehicula eleifend egestas. Vivamus in lorem in dolor molestie molestie
+                      sit amet ut elit. Nulla accumsan nisl sapien</p>
+                  </div>
+                </div>
+                <hr class="short" style="margin-left: 0px"> Based in: United States</p>
+  
+                <!-- <div id="wrap"> -->
+                <div class="container">
+                  <h3>Team Members</h3>
+                  <table cellpadding="0" cellspacing="0" border="0" class="datatable table table-striped table-bordered">
+                    <thead>
+                      <tr>
+                        <th>Gamer Tag</th>
+                        <th>Player Name</th>
+                        <th>Hometown</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr class="gradeX">
+                        <td>
+                          <a href="players.html">Killz_Streak57</a>
+                        </td>
+                        </td>
+                        <td class="center">Dave Smith</td>
+                        <td class="center">San Francisco, CA</td>
+                      </tr>
+                      <tr class="gradeX">
+                        <td>
+                          <a href="players.html">Killz_Streak57</a>
+                        </td>
+                        </td>
+                        <td class="center">Dave Smith</td>
+                        <td class="center">San Francisco, CA</td>
+                      </tr>
+                      <tr class="gradeX">
+                        <td>
+                          <a href="players.html">Killz_Streak57</a>
+                        </td>
+                        </td>
+                        <td class="center">Dave Smith</td>
+                        <td class="center">San Francisco, CA</td>
+                      </tr>
+                      <tr class="gradeX">
+                        <td>
+                          <a href="players.html">Killz_Streak57</a>
+                        </td>
+                        </td>
+                        <td class="center">Dave Smith</td>
+                        <td class="center">San Francisco, CA</td>
+                      </tr>
+                      <tr class="gradeX">
+                        <td>
+                          <a href="players.html">Killz_Streak57</a>
+                        </td>
+                        </td>
+                        <td class="center">Dave Smith</td>
+                        <td class="center">San Francisco, CA</td>
+                      </tr>
+                      <tr class="gradeX">
+                        <td>
+                          <a href="players.html">Killz_Streak57</a>
+                        </td>
+                        </td>
+                        <td class="center">Dave Smith</td>
+                        <td class="center">San Francisco, CA</td>
+                      </tr>
+                    </tbody>
+                    <tfoot>
+                      <tr>
+                        <th>Gamer Tag</th>
+                        <th>Player Name</th>
+                        <th>Hometown</th>
+                      </tr>
+                    </tfoot>
+                  </table>
+                </div>
+                <!-- </div> -->
+  
+              </div>
+            </div>
+            <!-- PLAYER BIOS and CIRCLE PICS -->
+
+        </div>
+        <div class="item px-2">
+          <div class="fh5co_hover_news_img">
+            <div class="fh5co_news_img">
+              <img src="images/39-324x235.jpg" alt="" />
+            </div>
+            <div>
+              <a href="#" class="d-block fh5co_small_post_heading">
+                <span class="">Event 4</span>
+              </a>
+              <div class="c_g">
+                <i class="fa fa-clock-o"></i> Oct 16,2017</div>
+            </div>
+          </div>
+        </div>
       </div>
-      <!-- </div> -->
-
     </div>
   </div>
-  <!-- PLAYER BIOS and CIRCLE PICS -->
+
+
 
   <div class="container-fluid fh5co_footer_right_reserved">
     <div class="container">
@@ -314,6 +549,9 @@
             </li>
             <li>
               <a href="contact.html" class="footer_last_part_menu">Contact</a>
+            </li>
+            <li>
+              <a href="terms.html" class="footer_last_part_menu">Terms and Cond</a>
             </li>
           </ul>
         </div>
