--- a/terms.html
+++ b/terms.html
@@ -117,7 +117,7 @@
                 <span class="sr-only">(current)</span>
               </a>
             </li> -->
-            <!-- <li class="nav-item ">
+            <!-- <li class="nav-item active">
               <a class="nav-link" href="contact.html">Contact
                 <span class="sr-only">(current)</span>
               </a>
@@ -127,12 +127,56 @@
       </nav>
     </div>
   </div>
-
-  <div class="container-fluid text-center">
-    <a href="players.html">
-      <img src="images/news-info.png" alt="img" class="img-fluid" style="padding: 60px" />
-    </a>
+  <div class="container-fluid contact_us_bg_img">
+    <div class="container">
+      <div class="row">
+        <a href="#" class="fh5co_con_123">
+          <i class="fa fa-pencil"></i>
+        </a>
+        <a href="#" class="fh5co_con pt-2"> Terms and Conditions </a>
+      </div>
+    </div>
   </div>
+
+  <div class="container padding">
+    <div class="container-fluid mb-4">
+      <div class="container">
+        <div class="row" style="padding: 60px">
+          <div class="col-12 col-md-12">
+            <h1>Terms of Use</h1>
+            <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis,
+              sed eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis
+              vel et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri.
+              Id eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
+              liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
+              Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
+            <h2>1. ELIGIBILITY</h2>
+            <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis,
+              sed eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis
+              vel et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri.
+              Id eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
+              liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
+              Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
+            <h2>2. ADDITIONAL TERMS</h2>
+            <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis,
+              sed eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis
+              vel et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri.
+              Id eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
+              liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
+              Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
+            <h2>3. PASSWORD AND ACCOUNT SECURITY</h2>
+            <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis,
+              sed eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis
+              vel et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri.
+              Id eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
+              liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
+              Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
   <div class="container-fluid fh5co_footer_right_reserved">
     <div class="container">
